--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gulp-clean": "^0.3.1",
     "gulp-connect": "^2.2.0",
     "gulp-if": "^1.2.5",
+    "gulp-import-css": "^0.1.2",
     "gulp-minify-css": "^1.1.1",
     "gulp-notify": "^2.2.0",
     "gulp-sftp": "^0.1.4",
