--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "jquery": "1.9.1",
     "normalize.css": "~3.0.3",
-    "tooltipster": "~3.3.0"
+    "tooltipster": "~3.3.0",
+    "qTip2": "~2.2.1"
   }
 }
